2010-01-07  Matevz Tadel  <matevz.tadel@ijs.si>

	* Rnr/GL/TringTvor_GL_Rnr.cxx:
	* Rnr/GL/TringTvor_GL_Rnr.h:
	Add static function RenderCEBBox() (moved in from Extendio_GL_Rnr).

2010-01-01  Matevz Tadel  <matevz.tadel@ijs.si>

	* Stones/TringTvor.cxx:
	* Stones/TringTvor.h:
	Add data-member 'Float_t mMaxVertexDistance' holding maximum
	distance from origin to any vertex.
	Calculate it in CalculateBoundingBox().

2009-12-25  Matevz Tadel  <matevz.tadel@ijs.si>

	Fixes for OSX build.

	* GForge/Makefile:
	Add ROOT_CFLAGS to CFLAGS.
	Add LDFLAGS to link command.

2009-12-22  Matevz Tadel  <matevz.tadel@ijs.si>

	* Stones/TringTvor.cxx:
	* Stones/TringTvor.h:
	Add variants of GenerateTriangleColorsFromVertexColors() functions
	that take external vertex/triangle color arrays as arguments.

	* Rnr/GL/TringTvor_GL_Rnr.cxx:
	* Rnr/GL/TringTvor_GL_Rnr.h:
	Implement also as a class. It is now possible to attach external
	color arrays into the rendering pipeline.
	It is trivial to extend this for textures, too.

	Improve the static do-it-all function.

	* Rnr/GL/RectTerrain_GL_Rnr.cxx:
	* Rnr/GL/RectTerrain_GL_Rnr.h:
	Use the new TringTvor rendering code.

2009-12-17  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/ZRibbon.cxx:
	* Glasses/ZRibbon.h:
	Remove obsolete glass.

	* Glasses/RGBAPalette.cxx:
	* Glasses/RGBAPalette.h:
	* Glasses/RectTerrain.cxx:
	* Glasses/RectTerrain.h:
	* glass.list:
	Updates to account for removal of ZRibbon.

2009-11-14  Matevz Tadel  <matevz.tadel@ijs.si>

	Allow un-registration of time-maker clients.

	* Glasses/TimeMaker.cxx:
	* Glasses/TimeMaker.h:
	Add function RemoveClient(ZGlass* lens).

	* Stones/TringTvor.cxx:
	Add some comments.

2009-08-14  Matevz Tadel  <matevz.tadel@ijs.si>

	* Rnr/GL/ZGlProgram_GL_Rnr.cxx:
	* Rnr/GL/ZGlProgram_GL_Rnr.h:
	Restructure shader program code by introducing helper methods:
	  void clean_program();
	  void check_program_state(RnrDriver* rd);
	  void bind_program();
	  void unbind_program();
